crates/edgezero-macros/tests/ui/secret_with_serde_flatten.stderr
error: `#[serde(flatten)]` is not allowed on fields of an `AppConfig`-derived struct (it would desync the canonical-form rules in §4.2 from the serde JSON shape). If you need a flat layout, define it explicitly.
 --> tests/ui/secret_with_serde_flatten.rs:6:5
  |
6 |     #[serde(flatten)]
  |     ^^^^^^^^^^^^^^^^^
